--- a/documentation/E01.md
+++ b/documentation/E01.md
@@ -2,6 +2,25 @@
 
 Start here...
 
-MAC address: 08002786A293
+### MAC address: 08002786A293
 
+network settings first
 ![network settings first](/documentation/E01/network0.png)
+
+### Without internet you can write a bestseller novel!
+### No but for real, you can still code nice programs without the use of internet and Stack Overflow 
+
+ping www.jamk.fi
+![pinging www.jamk.fi](/documentation/E01/ping.png)
+
+traceroute www.jamk.fi
+![traceroute www.jamk.fi](/documentation/E01/traceroute0.png)
+
+traceroute --resolve-hostnames www.jamk.fi
+![traceroute --resolve-hostnames www.jamk.fi](/documentation/E01/traceroute1.png)
+
+mtr www.jamk.fi
+![mtr www.jamk.fi](/documentation/E01/mtr0.png)
+
+mtr -n www.jamk.fi
+![mtr -n www.jamk.fi](/documentation/E01/mtr1.png)
