--- a/documentation/E01.md
+++ b/documentation/E01.md
@@ -4,11 +4,11 @@ Start here...
 
 ### MAC address: 08002786A293
 
-network settings first
+
 ![network settings first](/documentation/E01/network0.png)
 
 ### Without internet you can write a bestseller novel!
-### No but for real, you can still code nice programs without the use of internet and Stack Overflow 
+No but for real, you can still code nice programs without the use of internet and Stack Overflow 
 
 
 ![pinging www.jamk.fi](/documentation/E01/ping.png)
