--- a/documentation/E02.md
+++ b/documentation/E02.md
@@ -2,242 +2,8 @@
 
 Start here...
 
-Kytkinten konfiguraatiot
+## #show fdb
+![](/E02/etc_and_fdb.png)
 
 * [Switch1](/E02/Switch.cfg)
-
-```
-#
-# Module devmgr configuration.
-#
-configure snmp sysContact "https://www.extremenetworks.com/support/"
-configure sys-recovery-level switch reset
-
-#
-# Module vlan configuration.
-#
-configure vlan default delete ports all
-configure vr VR-Default delete ports 1-2
-configure vr VR-Default add ports 1-2
-configure vlan default delete ports 1-2
-create vlan "workstations"
-configure vlan workstations tag 5
-configure vlan workstations add ports 1 tagged  
-configure vlan workstations add ports 2 untagged  
-configure vlan workstations ipaddress 192.168.0.252 255.255.255.0
-
-#
-# Module mcmgr configuration.
-#
-
-#
-# Module otm configuration.
-#
-
-#
-# Module fdb configuration.
-#
-disable iparp vr VR-Mgmt refresh
-disable neighbor-discovery vr VR-Mgmt refresh
-
-#
-# Module rtmgr configuration.
-#
-enable icmp useredirects
-
-#
-# Module policy configuration.
-#
-configure policy slices tci-overwrite 0
-
-#
-# Module aaa configuration.
-#
-configure account admin encrypted "$5$LVUMiH$OmC73PnstIHrVfPRZiAJdGyv.u4rlpdGFNscvg5P7A5" 
-
-#
-# Module acl configuration.
-#
-
-
-
-
-#
-# Module bfd configuration.
-#
-
-#
-# Module bgp configuration.
-#
-
-#
-# Module cfgmgr configuration.
-#
-
-#
-# Module dnsAnalytics configuration.
-#
-
-#
-# Module dosprotect configuration.
-#
-
-#
-# Module dot1ag configuration.
-#
-
-#
-# Module eaps configuration.
-#
-
-#
-# Module edp configuration.
-#
-
-#
-# Module elrp configuration.
-#
-
-#
-# Module ems configuration.
-#
-
-#
-# Module epm configuration.
-#
-
-#
-# Module erps configuration.
-#
-
-#
-# Module esrp configuration.
-#
-
-#
-# Module etmon configuration.
-#
-
-#
-# Module exsshd configuration.
-#
-enable ssh2
-
-#
-# Module hal configuration.
-#
-configure ports 1 debounce time 0
-configure ports 2 debounce time 0
-
-#
-# Module idMgr configuration.
-#
-
-#
-# Module ipSecurity configuration.
-#
-
-#
-# Module isis configuration.
-#
-
-#
-# Module lldp configuration.
-#
-
-#
-# Module mrp configuration.
-#
-
-#
-# Module msdp configuration.
-#
-
-#
-# Module netLogin configuration.
-#
-
-#
-# Module netTools configuration.
-#
-
-#
-# Module nodealias configuration.
-#
-
-#
-# Module ntp configuration.
-#
-
-#
-# Module ospf configuration.
-#
-
-#
-# Module ospfv3 configuration.
-#
-
-#
-# Module pim configuration.
-#
-
-#
-# Module poe configuration.
-#
-
-#
-# Module rip configuration.
-#
-
-#
-# Module ripng configuration.
-#
-
-#
-# Module snmpMaster configuration.
-#
-configure snmpv3 engine-id 03:08:00:27:87:1f:97
-
-#
-# Module stp configuration.
-#
-configure mstp region 080027871f97
-disable stpd s0
-
-#
-# Module techSupport configuration.
-#
-
-#
-# Module telnetd configuration.
-#
-disable telnet
-
-#
-# Module tftpd configuration.
-#
-
-#
-# Module thttpd configuration.
-#
-
-#
-# Module twamp configuration.
-#
-
-#
-# Module vmt configuration.
-#
-
-#
-# Module vrrp configuration.
-#
-
-#
-# Module vsm configuration.
-#
-
-#
-# Module vpex configuration.
-#
-```
+* [Switch2](/E02/Switch1.cfg)
