--- a/documentation/E02.md
+++ b/documentation/E02.md
@@ -3,7 +3,7 @@
 Start here...
 
 ## #show fdb
-![](/E02/etc_and_fdb.png)
+![](/documentation/E02/etc_and_fdb.png)
 
-* [Switch1](/E02/Switch.cfg)
-* [Switch2](/E02/Switch1.cfg)
+* [Switch1](/documentation/E02/Switch.cfg)
+* [Switch2](/documentation/E02/Switch1.cfg)
