--- a/documentation/E02.md
+++ b/documentation/E02.md
@@ -2,8 +2,24 @@
 
 Start here...
 
+## Topology drawing
+![](/documentation/E02/E02.drawio)
+
 ## #show fdb
 ![](/documentation/E02/etc_and_fdb.png)
 
+## Wireshark obser
+![](/documentation/E02/wireshark.png)
+Source MAC address = 01:00:5e:00:00:fb
+
+EtherType = IPv4 0x0800
+
+Source IP address = 192.168.0.1
+
+Payload size = 164 bytes
+
+## Switch 1 config
 * [Switch1](/documentation/E02/Switch.cfg)
+
+## Switch 2 config
 * [Switch2](/documentation/E02/Switch1.cfg)
