--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -1,3 +1,43 @@
 # Documentation for E03
 
-Start here...
+Student number: 2 1 0 9 3 3 2
+                v v x y z k i
+
+
+Subnets: 10.09.93.0/24 AND 192.168.32.0/24
+
+
+## Exercise 1
+> What is the usable (host) address range of 192.168.32.0/24? What is the broadcast address? What is the subnet address?
+
+
+11111111 . 11111111 . 11111111 . 00000000   BIN
+nnnnnnnn . nnnnnnnn . nnnnnnnn . hhhhhhhh
+
+
+255      . 255      . 255      . 0          DEC
+
+
+Host bits:
+BIN             DEC
+hhhh hhhh
+
+
+0000 0000       0
+0000 0001       1
+0000 0010       2
+0000 0011       3
+0000 0100       4
+0000 0101       5
+0000 0110       6
+0000 0111       7
+0000 1000       8
+...
+1111 1100       252
+1111 1101       253
+1111 1110       254
+1111 1111       255
+
+
+Usable host address range is between 192.168.32.0 - 192.168.32.255
+
