--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -12,19 +12,15 @@ Subnets: 10.09.93.0/24 AND 192.168.32.0/24
 
 
 ```
-11111111 . 11111111 . 11111111 . 00000000   BIN
-
-
+11111111 . 11111111 . 11111111 . 00000000    -> BIN
 nnnnnnnn . nnnnnnnn . nnnnnnnn . hhhhhhhh
-
-
-255      . 255      . 255      . 0          DEC
+255      . 255      . 255      . 0           -> DEC
 
 
 Host bits:
-BIN             DEC
-hhhh hhhh
-
+|BIN             DEC|
+|hhhh hhhh          |
+|                   |
 |0000 0000       0  |
 |0000 0001       1  |
 |0000 0010       2  |
