--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -1,7 +1,6 @@
 # Documentation for E03
 
 Student number: 2 1 0 9 3 3 2
-                v v x y z k i
 
 
 Subnets: 10.09.93.0/24 AND 192.168.32.0/24
@@ -21,7 +20,7 @@ Host bits:
 |BIN             DEC|
 |hhhh hhhh          |
 |                   |
-|0000 0000       0  |
+|0000 0000       0  |   Subnet address
 |0000 0001       1  |
 |0000 0010       2  |
 |0000 0011       3  |
@@ -34,8 +33,16 @@ Host bits:
 |1111 1100       252|
 |1111 1101       253|
 |1111 1110       254|
-|1111 1111       255|
+|1111 1111       255|   Broadcast address
 ```
 
-Usable host address range is between 192.168.32.0 - 192.168.32.255
+Usable host address range = between 192.168.32.0 - 192.168.32.255, so 254 addresses for workstations
 
+
+Broadcast address = 192.168.32.255
+
+
+Subnet address = 192.168.32.0
+
+
+## Exercise 2
