--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -20,7 +20,7 @@ Host bits:
 |BIN             DEC|
 |hhhh hhhh          |
 |                   |
-|0000 0000       0  |   Subnet address
+|0000 0000       0  |   Subnet address, all host bits are 0
 |0000 0001       1  |
 |0000 0010       2  |
 |0000 0011       3  |
@@ -33,7 +33,7 @@ Host bits:
 |1111 1100       252|
 |1111 1101       253|
 |1111 1110       254|
-|1111 1111       255|   Broadcast address
+|1111 1111       255|   Broadcast address, all host bits are 1
 ```
 
 Usable host address range = between 192.168.32.0 - 192.168.32.255, so 254 addresses for workstations
@@ -46,3 +46,36 @@ Subnet address = 192.168.32.0
 
 
 ## Exercise 2
+> Divide the 192.168.ki.0/24 into smaller subnets with (atleast) 50 hosts in each. Notice! Make as small of a subnet/subnets as you can!
+
+2^6 = 64, 64 is enough for 50 devices
+
+```
+11111111 . 11111111 . 11111111 . 11000000    -> BIN
+nnnnnnnn . nnnnnnnn . nnnnnnnn . nnhhhhhh
+255      . 255      . 255      . 192           -> DEC
+
+Host bits:
+|BIN           DEC|
+|hhhh hhhh        |
+|                 |
+|00 0000       0  |   Subnet address, all host bits are 0
+|00 0001       1  |
+|00 0010       2  |
+|00 0011       3  |
+|00 0100       4  |
+|00 0101       5  |
+|00 0110       6  |
+|00 0111       7  |
+|00 1000       8  |
+|...              |
+|11 1100       60 |
+|11 1101       61 |
+|11 1110       62 |
+|11 1111       63 |   Broadcast address, all host bits are 1
+```
+
+| Syntax | Description |
+| ----------- | ----------- |
+| Header | Title |
+| Paragraph | Text |
