--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -75,7 +75,11 @@ Host bits:
 |11 1111       63 |   Broadcast address, all host bits are 1
 ```
 
-| Syntax | Description |
+| Specification | Subnet info |
 | ----------- | ----------- |
-| Header | Title |
-| Paragraph | Text |
+| Network address | Title |
+| New subnet mask | Text |
+| Number of usable (host) addresses in the subnet | x |
+| First IP Host address | x |
+| Last IP Host address | x |
+| Broadcast address | x |
