--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -12,7 +12,7 @@ Subnets: 10.09.93.0/24 AND 192.168.32.0/24
 
 ```
 11111111 . 11111111 . 11111111 . 00000000    -> BIN
-nnnnnnnn . nnnnnnnn . nnnnnnnn . hhhhhhhh
+nnnnnnnn . nnnnnnnn . nnnnnnnn . hhhhhhhh       n = network bit, h = host bit
 255      . 255      . 255      . 0           -> DEC
 
 
@@ -46,40 +46,65 @@ Subnet address = 192.168.32.0
 
 
 ## Exercise 2
-> Divide the 192.168.ki.0/24 into smaller subnets with (atleast) 50 hosts in each. Notice! Make as small of a subnet/subnets as you can!
+> Divide the 192.168.32.0/24 into smaller subnets with (atleast) 50 hosts in each. Notice! Make as small of a subnet/subnets as you can!
 
 2^6 = 64, 64 is enough for 50 devices
 
 ```
 11111111 . 11111111 . 11111111 . 11000000    -> BIN
-nnnnnnnn . nnnnnnnn . nnnnnnnn . nnhhhhhh
-255      . 255      . 255      . 192           -> DEC
+nnnnnnnn . nnnnnnnn . nnnnnnnn . nnhhhhhh       n = network bit, h = host bit
+255      . 255      . 255      . 192         -> DEC
 
 Host bits:
-|BIN           DEC|
-|hhhh hhhh        |
-|                 |
-|00 0000       0  |   Subnet address, all host bits are 0
-|00 0001       1  |
-|00 0010       2  |
-|00 0011       3  |
-|00 0100       4  |
-|00 0101       5  |
-|00 0110       6  |
-|00 0111       7  |
-|00 1000       8  |
-|...              |
-|11 1100       60 |
-|11 1101       61 |
-|11 1110       62 |
-|11 1111       63 |   Broadcast address, all host bits are 1
+  |BIN           DEC           |
+nn|hh hhhh                     |
+  |                            |
+00|00 0000       192.168.32.0  |   Subnet address
+00|00 0001       192.168.32.1  |
+00|00 0010       192.168.32.2  |
+00|00 0011       192.168.32.3  |
+00|00 0100       192.168.32.4  |
+00|00 0101       192.168.32.5  |
+00|00 0110       192.168.32.6  |
+00|00 0111       192.168.32.7  |
+00|00 1000       192.168.32.8  |
+  |...                         |
+00|11 1100       192.168.32.60 |
+00|11 1101       192.168.32.61 |
+00|11 1110       192.168.32.62 |
+00|11 1111       192.168.32.63 |   Broadcast address
+-------- #1 SUBNET END --------------------------------------
+
+nn|hh hhhh                     |
+  |                            |
+01|00 0000       192.168.32.64 |   Subnet address
+01|00 0001       192.168.32.65 |
+01|00 0010       192.168.32.65 |
+01|00 0011       192.168.32.66 |
+01|00 0100       192.168.32.67 |
+01|00 0101       192.168.32.68 |
+01|00 0110       192.168.32.69 |
+01|00 0111       192.168.32.70 |
+01|00 1000       192.168.32.71 |
+  |...                         |
+01|11 1100       192.168.32.124|
+01|11 1101       192.168.32.125|
+01|11 1110       192.168.32.126|
+01|11 1111       192.168.32.127|    Broadcast address
+-------- #2 SUBNET END ------------------------------------
+
+192.168.32.128 - 192.168.32.191
+-------- #3 SUBNET END ------------------------------------
+
+192.168.32.192 - 192.168.32.255
+-------- #4 SUBNET END ------------------------------------
 ```
 
-| Specification | Subnet info |
-| ----------- | ----------- |
-| Network address | Title |
-| New subnet mask | Text |
-| Number of usable (host) addresses in the subnet | x |
-| First IP Host address | x |
-| Last IP Host address | x |
-| Broadcast address | x |
+| Specification | #1 Subnet info | #2 Subnet info | #3 Subnet info | #4 Subnet info |
+| ----------- | ----------- | ----------- | ----------- | ----------- |
+| Network address | 192.168.32.0 | 192.168.32.64 | 192.168.32.128 | 192.168.32.192 |
+| New subnet mask | /26 or 255.255.255.192 | /26 | /26 | /26 |
+| Number of usable (host) addresses in the subnet | 62 | 62 | 62 | 62 |
+| First IP Host address | 192.168.32.1 | 192.168.32.65 | 192.168.32.129 | 192.168.32.193 |
+| Last IP Host address | 192.168.32.62 | 192.168.32.126 | 192.168.32.190 | 192.168.32.254 |
+| Broadcast address | 192.168.32.63 | 192.168.32.127 | 192.168.32.191 | 192.168.32.255 |
