--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -100,7 +100,7 @@ nn|hh hhhh                     |
 -------- #4 SUBNET END ------------------------------------
 ```
 
-| Specification | #1 Subnet info | #2 Subnet info | #3 Subnet info | #4 Subnet info |
+| Specification | 1 Subnet info | 2 Subnet info | 3 Subnet info | 4 Subnet info |
 | ----------- | ----------- | ----------- | ----------- | ----------- |
 | Network address | 192.168.32.0 | 192.168.32.64 | 192.168.32.128 | 192.168.32.192 |
 | New subnet mask | /26 or 255.255.255.192 | /26 | /26 | /26 |
@@ -108,3 +108,9 @@ nn|hh hhhh                     |
 | First IP Host address | 192.168.32.1 | 192.168.32.65 | 192.168.32.129 | 192.168.32.193 |
 | Last IP Host address | 192.168.32.62 | 192.168.32.126 | 192.168.32.190 | 192.168.32.254 |
 | Broadcast address | 192.168.32.63 | 192.168.32.127 | 192.168.32.191 | 192.168.32.255 |
+
+
+## Exercise 3
+> Divide the 10.xy.yz.0/24 into smaller subnets:
+- The subnets have to be as small as possible (usable hosts)
+- The subnets must have the capability to support 13 hosts in each of the subnets
