--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -112,5 +112,5 @@ nn|hh hhhh                     |
 
 ## Exercise 3
 > Divide the 10.xy.yz.0/24 into smaller subnets:
-- The subnets have to be as small as possible (usable hosts)
-- The subnets must have the capability to support 13 hosts in each of the subnets
+>- The subnets have to be as small as possible (usable hosts)
+>- The subnets must have the capability to support 13 hosts in each of the subnets
