--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -103,7 +103,7 @@ nn|hh hhhh                     |
 | Specification | 1 Subnet info | 2 Subnet info | 3 Subnet info | 4 Subnet info |
 | ----------- | ----------- | ----------- | ----------- | ----------- |
 | Network address | 192.168.32.0 | 192.168.32.64 | 192.168.32.128 | 192.168.32.192 |
-| New subnet mask | /26 or 255.255.255.192 | /26 | /26 | /26 |
+| New subnet mask | 255.255.255.192 | 255.255.255.192 | 255.255.255.192 | 255.255.255.192 |
 | Number of usable (host) addresses in the subnet | 62 | 62 | 62 | 62 |
 | First IP Host address | 192.168.32.1 | 192.168.32.65 | 192.168.32.129 | 192.168.32.193 |
 | Last IP Host address | 192.168.32.62 | 192.168.32.126 | 192.168.32.190 | 192.168.32.254 |
@@ -111,6 +111,46 @@ nn|hh hhhh                     |
 
 
 ## Exercise 3
-> Divide the 10.xy.yz.0/24 into smaller subnets:
+> Divide the 10.09.93.0/24 into smaller subnets:
 >- The subnets have to be as small as possible (usable hosts)
 >- The subnets must have the capability to support 13 hosts in each of the subnets
+
+2^4 = 16, so enough for 13 devices
+
+```
+h = 4 host bits
+n = 24+4 = 28 subnet bits
+
+255       . 255       . 255       . 240         DEC
+1111 1111 . 1111 1111 . 1111 1111 . 1111 0000   BIN
+nnnn nnnn . nnnn nnnn . nnnn nnnn . nnnn hhhh
+
+nnnn|hhhh
+0000|0000    10.09.93.0      Subnet address
+0000|0001    10.09.93.1
+...
+0000|1110    10.09.93.14
+0000|1111    10.09.93.15     Broadcast address
+------------- #1 SUBNET END -----------------------------
+
+0001|0000    10.09.93.16    Subnet address
+0001|0001    10.09.93.17
+...
+0001|1110    10.09.93.30
+0001|1111    10.09.93.31    Broadcast address
+------------- #2 SUBNET END -----------------------------
+
+0010|0000    10.09.93.32    Subnet address
+0010|0001    10.09.93.33
+...
+0010|1110    10.09.93.46
+0010|1111    10.09.93.47    Broadcast address
+------------- #3 SUBNET END ------------------------------
+
+0011|0000    10.09.93.224    Subnet address
+0011|0001    10.09.93.225
+...
+0011|1110    10.09.93.238
+0011|1111    10.09.93.239    Broadcast address
+------------ #15 SUBNET END ------------------------------
+```
