--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -154,3 +154,18 @@ nnnn|hhhh
 0011|1111    10.09.93.239    Broadcast address
 ------------ #15 SUBNET END ------------------------------
 ```
+
+| Specification | 1 Subnet info | 2 Subnet info | 3 Subnet info | 15 Subnet info |
+| ----------- | ----------- | ----------- | ----------- | ----------- |
+| Network address | 10.09.93.0 | 10.09.93.16 | 10.09.93.32 | 10.09.93.224 |
+| New subnet mask | 255.255.255.240 | 255.255.255.240 | 255.255.255.240 | 255.255.255.240 |
+| Number of usable (host) addresses in the subnet | 14 | 14 | 14 | 14 |
+| First IP Host address | 10.09.93.1 | 10.09.93.17 | 10.09.93.33 | 10.09.93.225 |
+| Last IP Host address | 10.09.93.14 | 10.09.93.30 | 10.09.93.46 | 10.09.93.238 |
+| Broadcast address | 10.09.93.15 | 10.09.93.31 | 10.09.93.47 | 10.09.93.239 |
+
+
+## Exercise 4
+> Divide the last subnet, of from exercise 3, into smaller subnets:
+>- The subnets have to be as small as possible (usable hosts)
+>- The subnets must have the capability to support 2 hosts in each of the subnets
