--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -100,7 +100,7 @@ nn|hh hhhh                     |
 -------- #4 SUBNET END ------------------------------------
 ```
 
-| Specification | 1 Subnet info | 2 Subnet info | 3 Subnet info | 4 Subnet info |
+| Specification | Subnet 1 info | Subnet 2 info | Subnet 3 info | Subnet 4 info |
 | ----------- | ----------- | ----------- | ----------- | ----------- |
 | Network address | 192.168.32.0 | 192.168.32.64 | 192.168.32.128 | 192.168.32.192 |
 | New subnet mask | 255.255.255.192 | 255.255.255.192 | 255.255.255.192 | 255.255.255.192 |
@@ -155,7 +155,7 @@ nnnn|hhhh
 ------------ #15 SUBNET END ------------------------------
 ```
 
-| Specification | 1 Subnet info | 2 Subnet info | 3 Subnet info | 15 Subnet info |
+| Specification | Subnet 1 info | Subnet 2 info | Subnet 4 info | Subnet 15 info |
 | ----------- | ----------- | ----------- | ----------- | ----------- |
 | Network address | 10.09.93.0 | 10.09.93.16 | 10.09.93.32 | 10.09.93.224 |
 | New subnet mask | 255.255.255.240 | 255.255.255.240 | 255.255.255.240 | 255.255.255.240 |
