--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -1,4 +1,5 @@
 # Documentation for E03
+#1 #2 #3 #4 #5 #6
 
 Student number: 2 1 0 9 3 3 2
 
@@ -155,7 +156,7 @@ nnnn|hhhh
 ------------ #15 SUBNET END ------------------------------
 ```
 
-| Specification | Subnet 1 info | Subnet 2 info | Subnet 4 info | Subnet 15 info |
+| Specification | Subnet 1 info | Subnet 2 info | Subnet 3 info | Subnet 15 info |
 | ----------- | ----------- | ----------- | ----------- | ----------- |
 | Network address | 10.09.93.0 | 10.09.93.16 | 10.09.93.32 | 10.09.93.224 |
 | New subnet mask | 255.255.255.240 | 255.255.255.240 | 255.255.255.240 | 255.255.255.240 |
@@ -166,6 +167,11 @@ nnnn|hhhh
 
 
 ## Exercise 4
-> Divide the last subnet, of from exercise 3, into smaller subnets:
+> Divide the last subnet, from exercise 3, into smaller subnets:
 >- The subnets have to be as small as possible (usable hosts)
 >- The subnets must have the capability to support 2 hosts in each of the subnets
+
+2^2 = 4, so enough for 2 devices
+
+```
+```
