--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -1,5 +1,4 @@
 # Documentation for E03
-#1 #2 #3 #4 #5 #6
 
 Student number: 2 1 0 9 3 3 2
 
@@ -173,5 +172,11 @@ nnnn|hhhh
 
 2^2 = 4, so enough for 2 devices
 
-```
-```
+| Specification | Subnet 1 info | Subnet 2 info |
+| ----------- | ----------- | ----------- |
+| Network address | 10.09.93.224 | 10.09.93.16 |
+| New subnet mask | 255.255.255.224 | 255.255.255.224 |
+| Number of usable (host) addresses in the subnet | 2 | 2 |
+| First IP Host address | 10.09.93.1 | 10.09.93.17 |
+| Last IP Host address | 10.09.93.14 | 10.09.93.30 |
+| Broadcast address | 10.09.93.15 | 10.09.93.31 |
