--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -174,9 +174,12 @@ nnnn|hhhh
 
 | Specification | Subnet 1 info | Subnet 2 info |
 | ----------- | ----------- | ----------- |
-| Network address | 10.09.93.224 | 10.09.93.16 |
+| Network address | 10.09.93.224 | 10.09.93.228 |
 | New subnet mask | 255.255.255.224 | 255.255.255.224 |
 | Number of usable (host) addresses in the subnet | 2 | 2 |
-| First IP Host address | 10.09.93.1 | 10.09.93.17 |
-| Last IP Host address | 10.09.93.14 | 10.09.93.30 |
-| Broadcast address | 10.09.93.15 | 10.09.93.31 |
+| First IP Host address | 10.09.93.225 | 10.09.93.229 |
+| Last IP Host address | 10.09.93.226 | 10.09.93.230 |
+| Broadcast address | 10.09.93.227 | 10.09.93.231 |
+
+
+## Exercise 5
