--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -183,3 +183,38 @@ nnnn|hhhh
 
 
 ## Exercise 5
+> Is subnet 10.09.93.0/24 a part of the supernet 10.09.16.0/20?
+
+```
+/20 network mask ->
+nnnn nnnn . nnnn nnnn . nnnn hhhh . hhhh hhhh
+1111 1111 . 1111 1111 . 1111 0000 . 0000 0000   BIN
+
+
+0000 . 0000 0000 -> 0.0     Subnet address
+1111 . 1111 1111 -> 15.255  Broadcast address
+
+
+
+10.09.16.0 converted:
+0000 1010 . 0000 1001 . 0001 0000 . 0000 0000   BIN
+
+Address side                 | Host bit side
+0000 1010 . 0000 1001 . 0001 | 0000 . 0000 0000          -->       10.09.16.0
+0000 1010 . 0000 1001 . 0001 | 1111 . 1111 1111          -->       10.09.31.255
+
+                                                     compared to   10.09.93.0
+
+**It is not part of the supernet**
+```
+
+
+
+
+/20 network mask in hexadecimal is:
+
+
+0xfffff000 -> FF.FF.F0.00
+
+## Exercise 6
+> Is subnet 10.09.93.0/24 a part of supernet 10.0.0.0/8?
