--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -204,16 +204,22 @@ Address side                 | Host bit side
 
                                                      compared to   10.09.93.0
 
-```
 **It is not part of the supernet**
+```
 
-
-
-
-/20 network mask in hexadecimal is:
-
-
-0xfffff000 -> FF.FF.F0.00
 
 ## Exercise 6
 > Is subnet 10.09.93.0/24 a part of supernet 10.0.0.0/8?
+
+I am going to try to do this comparing the hexadecimal values of the subnet and given supernet.
+
+```
+Netmask /8 in hex: 0xff000000 = F0.00.00.00
+Subnet in hex: 0a.09.5d.00
+Supernet in hex: 0a.00.00.00
+
+F0.00.00.00
+0a.09.5d.00
+0a.00.00.00
+^ equal
+```
