--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -204,6 +204,7 @@ Address side                 | Host bit side
 
                                                      compared to   10.09.93.0
 
+It can be seen that:
 **It is not part of the supernet**
 ```
 
@@ -211,15 +212,34 @@ Address side                 | Host bit side
 ## Exercise 6
 > Is subnet 10.09.93.0/24 a part of supernet 10.0.0.0/8?
 
-I am going to try to do this comparing the hexadecimal values of the subnet and given supernet.
-
 ```
-Netmask /8 in hex: 0xff000000 = F0.00.00.00
-Subnet in hex: 0a.09.5d.00
-Supernet in hex: 0a.00.00.00
+/8 network mask ->
+nnnn nnnn . hhhh hhhh . hhhh hhhh . hhhh hhhh
+1111 1111 . 0000 0000 . 0000 0000 . 0000 0000   BIN
 
-F0.00.00.00
-0a.09.5d.00
-0a.00.00.00
-^ equal
+
+0000 0000 . 0000 0000 . 0000 0000 . 0000 0000            -->       0.0      Subnet address
+1111 1111 . 1111 1111 . 1111 1111 . 1111 1111            -->       255.255  Broadcast address
+
+
+10.0.0.0 converted:
+0000 1010 . 0000 0000 . 0000 0000 . 0000 0000   BIN
+
+Address side                 | Host bit side
+0000 1010 . 0000 0000 . 0000 | 0000 . 0000 0000          -->       10.00.00.0
+0000 1010 . 0000 0000 . 0000 | 1111 . 1111 1111          -->       10.0.15.255
+
+                                                     compared to   10.08.93.0
+
+It can be seen that:
+**It is part of the supernet**
 ```
+
+
+## IP address from https://www.ripe.net
+
+For now I use my phone's mobile hotspot as internet for my other devices such as this computer.
+
+
+The responsible organisation is Elisa Oyj (my operator) and my net name is SL-CGN.
+![](/documentation/E03/ripe0.png) 
