--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -242,4 +242,30 @@ For now I use my phone's mobile hotspot as internet for my other devices such as
 
 
 The responsible organisation is Elisa Oyj (my operator) and my net name is SL-CGN.
+
+
+The network mask seems to be /14 so they can have up to 262143 devices in the subnet.
 ![](/documentation/E03/ripe0.png) 
+
+
+## Internet registries
+
+
+| 195.09.93.0/24 | 43.09.32.0/24 | 15.32.09.0/24 | 100.93.32.0/24 |
+| ----------- | ----------- | ----------- | ----------- |
+| RU-MGTS-RFC | ALIBABA_CLOUD | HP-INTERNET | SHARED-ADDRESS-SPACE-RFCTBD-IANA-RESERVED |
+
+
+### 195.09.93.0/24
+![](/documentation/E03/arin0.png)
+
+
+### 43.09.32.0/24
+![](/documentation/E03/arin1.png)
+
+### 15.32.09.0/24
+![](/documentation/E03/arin2.png)
+
+
+### 100.93.32.0/24
+![](/documentation/E03/arin3.png)
