--- a/documentation/E03.md
+++ b/documentation/E03.md
@@ -250,22 +250,23 @@ The network mask seems to be /14 so they can have up to 262143 devices in the su
 
 ## Internet registries
 
+I used arin.net to look up the IPs
 
 | 195.09.93.0/24 | 43.09.32.0/24 | 15.32.09.0/24 | 100.93.32.0/24 |
 | ----------- | ----------- | ----------- | ----------- |
 | RU-MGTS-RFC | ALIBABA_CLOUD | HP-INTERNET | SHARED-ADDRESS-SPACE-RFCTBD-IANA-RESERVED |
 
 
-### 195.09.93.0/24
+### 195.09.93.0/24 Moscow City Telephone
 ![](/documentation/E03/arin0.png)
 
 
-### 43.09.32.0/24
+### 43.09.32.0/24 Aliyun Computing Co.LTD
 ![](/documentation/E03/arin1.png)
 
-### 15.32.09.0/24
+### 15.32.09.0/24 Hewlett-Packard Company
 ![](/documentation/E03/arin2.png)
 
 
-### 100.93.32.0/24
+### 100.93.32.0/24 belongs to nobody initially but is used in providing some internet services?
 ![](/documentation/E03/arin3.png)
