--- a/documentation/E04.md
+++ b/documentation/E04.md
@@ -1,2 +1,56 @@
 # Documentation for E04
 
+## Starting out
+I imported VyOS into Virtualbox and added an adapter 1 connected to LANx through to switch 2 on adapter 4. 
+
+## Physical topology
+I modified the physical topology from E02 and updated it along the exercise.
+![](/documentation/E04/phy_topology.png)
+
+
+## Logical topology
+```
+192.168.32.0/26 --> 64 address subnet, for Lubuntu 9000
+192.168.32.64/26 --> 64 address subnet, for Lubuntu 9001
+
+10.09.93.224/28 --> 16 address subnet, for switches
+```
+![](/documentation/E04/log_topology.png)
+
+
+## Creating VLAN playstations and adding tagged ports
+![](/documentation/E04/playstationsconf.png)
+
+
+## Configuring vifs
+![](/documentation/E04/vifs.png)
+![](/documentation/E04/vifs1.png)
+
+
+## Pinging
+Pinging router/vyos from Lubuntu 9001
+
+
+![](/documentation/E04/ping_lubuntu2.png)
+
+
+Pinging Lubuntu 9000 from Lubuntu 9001
+
+
+--> Destination host unreachable
+
+
+I have to add **port 3** as **tagged** in switch 2 to fix the problem:
+
+
+![](/documentation/E04/fix0.png)
+
+
+Creating VLAN network_devices on **switch2**. Later made necessary changes to **switch 1**. I am kind of lost at the moment but let's see if things work out
+
+
+![](/documentation/E04/switchconfs0.png)
+![](/documentation/E04/switchconfs.png)
+
+
+Trying to add vif 20 in vyos, I can't commit the change. Don't know what went wrong.
