--- a/documentation/E04.md
+++ b/documentation/E04.md
@@ -54,3 +54,6 @@ Creating VLAN network_devices on **switch2**. Later made necessary changes to **
 
 
 Trying to add vif 20 in vyos, I can't commit the change. Don't know what went wrong.
+
+
+![](/documentation/E04/vyosfail.png)
