--- a/documentation/E04.md
+++ b/documentation/E04.md
@@ -26,6 +26,8 @@ I modified the physical topology from E02 and updated it along the exercise.
 ![](/documentation/E04/vifs.png)
 ![](/documentation/E04/vifs1.png)
 
+I later changed vif 10 ip address to **192.168.32.126/26**
+
 
 ## Pinging
 Pinging router/vyos from Lubuntu 9001
@@ -57,3 +59,6 @@ Trying to add vif 20 in vyos, I can't commit the change. Don't know what went wr
 
 
 ![](/documentation/E04/vyosfail.png)
+
+
+changed vif 10 address 10 192.168.32.126/26 from .125/26
