--- a/documentation/E04.md
+++ b/documentation/E04.md
@@ -60,5 +60,8 @@ Trying to add vif 20 in vyos, I can't commit the change. Don't know what went wr
 
 ![](/documentation/E04/vyosfail.png)
 
+Switch 1-2 configs
 
-changed vif 10 address 10 192.168.32.126/26 from .125/26
+![](/documentation/E04/switch1.png)
+
+![](/documentation/E04/switch2.png)
