--- a/documentation/E04.md
+++ b/documentation/E04.md
@@ -5,7 +5,7 @@ I imported VyOS into Virtualbox and added an adapter 1 connected to LANx through
 
 ## Physical topology
 I modified the physical topology from E02 and updated it along the exercise.
-![](/documentation/E04/phy.png)
+![](/documentation/E04/phy.jpg)
 
 
 ## Logical topology
@@ -15,7 +15,7 @@ I modified the physical topology from E02 and updated it along the exercise.
 
 10.09.93.224/28 --> 16 address subnet, for switches
 ```
-![](/documentation/E04/log.png)
+![](/documentation/E04/log.jpg)
 
 
 ## Creating VLAN playstations and adding tagged ports
