--- a/documentation/E04.md
+++ b/documentation/E04.md
@@ -28,15 +28,17 @@ I modified the physical topology from E02 and updated it along the exercise.
 
 I later changed vif 10 ip address to **192.168.32.126/26**
 
+![](/documentation/E04/vyosfinal.png)
+
 
 ## Pinging
-Pinging router/vyos from Lubuntu 9001
+Pinging router/vyos from Lubuntu 2
 
 
 ![](/documentation/E04/ping_lubuntu2.png)
 
 
-Pinging Lubuntu 9000 from Lubuntu 9001
+Pinging Lubuntu 1 from Lubuntu 2
 
 
 --> Destination host unreachable
@@ -44,23 +46,21 @@ Pinging Lubuntu 9000 from Lubuntu 9001
 
 I have to add **port 3** as **tagged** in switch 2 to fix the problem:
 
-
 ![](/documentation/E04/fix0.png)
 
+Pinging switch 1 from Lubuntu 1:
 
-Creating VLAN network_devices on **switch2**. Later made necessary changes to **switch 1**. I am kind of lost at the moment but let's see if things work out
+![](/documentation/E04/ping1.png)
 
+Pinging switch 2 form Lubuntu 2:
 
-![](/documentation/E04/switchconfs0.png)
-![](/documentation/E04/switchconfs.png)
+![](/documentation/E04/ping2.png)
 
+## Some fixing
 
-Trying to add vif 20 in vyos, I can't commit the change. Don't know what went wrong.
+Here I realized that the ip addresses given for switches, e.g. 10.(09).93.225/28 cannot contain the 0 before the 9, so I changed every address to not contain the 0. The problem can be seen from earlier logical topology picture.
 
-
-![](/documentation/E04/vyosfail.png)
-
-Switch 1-2 configs
+Necessary edits done to switch 1-2 configs
 
 1
 
@@ -69,3 +69,7 @@ Switch 1-2 configs
 2
 
 ![](/documentation/E04/switch2.png)
+
+## Final edits
+
+![](/documentation/E04/fixed_log.png)
