--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -1,2 +1,6 @@
 # Documentation for E05
 
+I cloned VyOS 1 to get the second one and used Lubuntu wireshark VM as Lubuntu 3
+
+
+VyOS 1 and 2 use untagged IPs: 
