--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -4,3 +4,5 @@ I cloned VyOS 1 to get the second one and used Lubuntu wireshark VM as Lubuntu 3
 
 
 VyOS 1 and 2 use untagged IPs: 
+
+![](./E05/vyos1.png) 
