--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -3,6 +3,8 @@
 I cloned VyOS 1 to get the second one and used Lubuntu wireshark VM as Lubuntu 3
 
 
-VyOS 1 and 2 use untagged IPs: 
+VyOS 1 and 2 use untagged IPs. These are their configs:
 
 ![](./E05/vyos1.png) 
+
+![](./E05/vyos2.png)
