--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -2,6 +2,7 @@
 
 I cloned VyOS 1 to get the second one and used Lubuntu wireshark VM as Lubuntu 3
 
+![](./E05/wschange.png) 
 
 VyOS 1 and 2 use untagged IPs. These are their configs:
 
