--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -1,6 +1,8 @@
 # Documentation for E05
 
-I cloned VyOS 1 to get the second one and used Lubuntu wireshark VM as Lubuntu 3
+I cloned VyOS 1 to get the second one and used Lubuntu wireshark VM as Lubuntu 3.
+
+I changed Lubuntu adapter settings from **LAN 2** to **LAN 5**
 
 ![](./E05/wschange.png) 
 
