--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -10,3 +10,12 @@ VyOS 1 and 2 use untagged IPs. These are their configs:
 
 ![](./E05/vyos1.png) 
 ![](./E05/vyos2.png)
+
+´´´
+VLAN workstations: 192.168.32.0/26
+set service dhcp-server shared-network-name teht subnet 192.168.32.0/26 default-router 192.168.32.62
+
+set service dhcp-server shared-network-name teht subnet 192.168.32.0/26 range PCs start 192.168.32.1
+
+set service dhcp-server shared-network-name teht subnet 192.168.32.0/26 range PCs stop 192.168.32.50
+´´´
