--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -11,6 +11,7 @@ VyOS 1 and 2 use untagged IPs. These are their configs:
 ![](./E05/vyos1.png) 
 ![](./E05/vyos2.png)
 
+**Configurations for VLAN workstations**
 ```
 VLAN workstations: 192.168.32.0/26
 set service dhcp-server shared-network-name teht subnet 192.168.32.0/26 default-router 192.168.32.62
