--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -16,15 +16,15 @@ VyOS 1 and 2 use untagged IPs. These are their configs:
 **Configurations for VLAN workstations**:
 ```
 VLAN workstations: 192.168.32.0/26
-set service dhcp-server shared-network-name teht subnet 192.168.32.0/26 default-router 192.168.32.62
-set service dhcp-server shared-network-name teht subnet 192.168.32.0/26 range PCs start 192.168.32.1
-set service dhcp-server shared-network-name teht subnet 192.168.32.0/26 range PCs stop 192.168.32.50
+set service dhcp-server shared-network-name VLAN5 subnet 192.168.32.0/26 default-router 192.168.32.62
+set service dhcp-server shared-network-name VLAN5 subnet 192.168.32.0/26 range PCs start 192.168.32.1
+set service dhcp-server shared-network-name VLAN5 subnet 192.168.32.0/26 range PCs stop 192.168.32.50
 ```
 
 **Configurations for VLAN Playstations**:
 ```
 VLAN Playstations: 192.168.32.64/26
-set service dhcp-server shared-network-name teht subnet 192.168. default-router 192.168.32.126
-set service dhcp-server shared-network-name teht subnet 192.168. range PCs start 192.168.32.65
-set service dhcp-server shared-network-name teht subnet 192.168. range PCs stop 192.168.32.105
+set service dhcp-server shared-network-name VLAN10 subnet 192.168. default-router 192.168.32.126
+set service dhcp-server shared-network-name VLAN10 subnet 192.168. range PCs start 192.168.32.65
+set service dhcp-server shared-network-name VLAN10 subnet 192.168. range PCs stop 192.168.32.105
 ```
