--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -24,15 +24,15 @@ set service dhcp-server shared-network-name VLAN5 subnet 192.168.32.0/26 range P
 **Configurations for VLAN Playstations**:
 ```
 VLAN Playstations: 192.168.32.64/26
-set service dhcp-server shared-network-name VLAN10 subnet 192.168. default-router 192.168.32.126
-set service dhcp-server shared-network-name VLAN10 subnet 192.168. range PCs start 192.168.32.65
-set service dhcp-server shared-network-name VLAN10 subnet 192.168. range PCs stop 192.168.32.105
+set service dhcp-server shared-network-name VLAN10 subnet 192.168.32.64/26 default-router 192.168.32.126
+set service dhcp-server shared-network-name VLAN10 subnet 192.168.32.64/26 range PCs start 192.168.32.65
+set service dhcp-server shared-network-name VLAN10 subnet 192.168.32.64/26 range PCs stop 192.168.32.105
 ```
 
 **Configurations for LAN 5**:
 ```
-VLAN Playstations: 192.168.32.64/26
-set service dhcp-server shared-network-name LAN5 subnet 192.168. default-router 192.168.32.126
-set service dhcp-server shared-network-name LAN5 subnet 192.168. range PCs start 192.168.32.65
-set service dhcp-server shared-network-name LAN5 subnet 192.168. range PCs stop 192.168.32.105
+LAN5: 192.168.32.128/26
+set service dhcp-server shared-network-name LAN5 subnet 192.168.32.128/26 default-router 192.168.32.126
+set service dhcp-server shared-network-name LAN5 subnet 192.168.32.128/26 range PCs start 192.168.32.65
+set service dhcp-server shared-network-name LAN5 subnet 192.168.32.128/26 range PCs stop 192.168.32.105
 ```
