--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -13,7 +13,7 @@ VyOS 1 and 2 use untagged IPs. These are their configs:
 
 
 
-**VyOs 1 Configurations for VLAN workstations**:
+**VyOs** 1 Configurations for VLAN workstations:
 ```
 VLAN workstations: 192.168.32.0/26
 set service dhcp-server shared-network-name VLAN5 subnet 192.168.32.0/26 default-router 192.168.32.62
@@ -21,7 +21,7 @@ set service dhcp-server shared-network-name VLAN5 subnet 192.168.32.0/26 range P
 set service dhcp-server shared-network-name VLAN5 subnet 192.168.32.0/26 range PCs stop 192.168.32.50
 ```
 
-**VyOs 1 Configurations for VLAN playstations**:
+**VyOs 1** Configurations for VLAN playstations:
 ```
 VLAN playstations: 192.168.32.64/26
 set service dhcp-server shared-network-name VLAN10 subnet 192.168.32.64/26 default-router 192.168.32.126
@@ -29,7 +29,7 @@ set service dhcp-server shared-network-name VLAN10 subnet 192.168.32.64/26 range
 set service dhcp-server shared-network-name VLAN10 subnet 192.168.32.64/26 range PCs stop 192.168.32.105
 ```
 
-**VyOs 2 Configurations for LAN 5**:
+**VyOs** 2 Configurations for LAN 5:
 ```
 LAN5: 192.168.32.128/26
 set service dhcp-server shared-network-name LAN5 subnet 192.168.32.128/26 default-router 192.168.32.129
