--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -12,6 +12,7 @@ VyOS 1 and 2 use untagged IPs. These are their configs:
 ![](./E05/vyos2.png)
 
 
+I did static routing:
 
 **VyOs 1** Configurations for VLAN workstations:
 ```
@@ -36,3 +37,5 @@ set service dhcp-server shared-network-name LAN5 subnet 192.168.32.128/26 defaul
 set service dhcp-server shared-network-name LAN5 subnet 192.168.32.128/26 range PCs start 192.168.32.130
 set service dhcp-server shared-network-name LAN5 subnet 192.168.32.128/26 range PCs stop 192.168.32.180
 ```
+
+I then changed 
