--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -11,8 +11,7 @@ VyOS 1 and 2 use untagged IPs. These are their configs:
 ![](./E05/vyos1.png) 
 ![](./E05/vyos2.png)
 
-
-I did static routing:
+DHCP configuration:
 
 **VyOs 1** Configurations for VLAN workstations:
 ```
@@ -38,4 +37,6 @@ set service dhcp-server shared-network-name LAN5 subnet 192.168.32.128/26 range 
 set service dhcp-server shared-network-name LAN5 subnet 192.168.32.128/26 range PCs stop 192.168.32.180
 ```
 
-I then changed 
+**show dhcp server leases** -command:
+
+![](./E05/dhcp.png)
