--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -40,3 +40,6 @@ set service dhcp-server shared-network-name LAN5 subnet 192.168.32.128/26 range 
 **show dhcp server leases** -command:
 
 ![](./E05/dhcp.png)
+
+I then pinged **Lubuntu 1-2** and **router 2** from **router 1**:
+![](./E05/vyos1-all.png)
