--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -45,6 +45,6 @@ I then pinged **Lubuntu 1-2** and **router 2** from **router 1**:
 
 ![](./E05/vyos1-all.png)
 
-Pinged **router 2** from **Lubuntu 3**:
+Pinged **Lubuntu 3** from **router 2**:
 
 ![](./E05/vyos2-lub3.png)
