--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -48,3 +48,8 @@ I then pinged **Lubuntu 1-2** and **router 2** from **router 1**:
 Pinged **Lubuntu 3** from **router 2**:
 
 ![](./E05/vyos2-lub3.png)
+
+
+
+I then creates static routes for both routers:
+
