--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -11,7 +11,7 @@ VyOS 1 and 2 use untagged IPs. These are their configs:
 ![](./E05/vyos1.png) 
 ![](./E05/vyos2.png)
 
-DHCP configuration:
+### DHCP configuration:
 
 **VyOs 1** Configurations for VLAN workstations:
 ```
