--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -51,5 +51,8 @@ Pinged **Lubuntu 3** from **router 2**:
 
 
 
-I then creates static routes for both routers:
+I then created static routes for both routers:
 
+![](./E05/vyos1static.png)
+
+![](./E05/vyos2static.png)
