--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -56,3 +56,13 @@ I then created static routes for both routers:
 ![](./E05/vyos1static.png)
 
 ![](./E05/vyos2static.png)
+¨
+### Traceroutes
+
+**Lubuntu 1** traceroute to **Lubuntu 3**:
+
+![](./E05/lub1trace.png)
+
+**Lubuntu 3** traceroute to **Lubuntu 2**:
+
+![](./E05/lub3trace.png)
