--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -1,5 +1,8 @@
 # Documentation for E05
 
+### Topology maps
+![](./E05/Topologies-Log_topo.png) 
+
 I cloned VyOS 1 to get the second one and used Lubuntu wireshark VM as Lubuntu 3.
 
 I changed Lubuntu adapter settings from **LAN 3** to **LAN 5**
