--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -73,3 +73,57 @@ I then created static routes for both routers:
 **Lubuntu 3** traceroute to **Lubuntu 2**:
 
 ![](./E05/lub3trace.png)
+
+### Configs
+
+**Router 1**
+```
+interfaces {
+    ethernet eth0 {
+        duplex auto
+        hw-id 08:00:27:ee:90:d5
+        smp-affinity auto
+        speed auto
+        vif 5 {
+            address 192.168.32.62/26
+            description Workstations
+        }
+        vif 10 {
+            address 192.168.32.126/26
+            description Playstations
+        }
+        vif 20 {
+            address 10.9.93.227/28
+            description network_devices
+        }
+    }
+    ethernet eth1 {
+        address 10.9.93.33/30
+        description RtoR
+```
+
+**Router 2**
+```
+interfaces {
+    ethernet eth1 {
+        address 10.9.93.34/30
+        description RtoR
+        duplex auto
+        hw-id 08:00:27:db:4d:17
+        smp-affinity auto
+        speed auto
+    }
+    ethernet eth2 {
+        address 192.168.32.129/26
+        description LAN5
+        duplex auto
+        hw-id 08:00:27:41:d1:c3
+        smp-affinity auto
+        speed auto
+    }
+    loopback lo {
+    }
+}
+protocols {
+    static {
+```
