--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -100,6 +100,78 @@ interfaces {
     ethernet eth1 {
         address 10.9.93.33/30
         description RtoR
+        duplex auto
+        hw-id 08:00:27:dd:2e:0c
+        smp-affinity auto
+        speed auto
+    }
+    loopback lo {
+    }
+}
+protocols {
+    static {
+        route 192.168.32.128/26 {
+            next-hop 10.9.93.34 {
+            }
+        }
+    }
+}
+service {
+    dhcp-server {
+        shared-network-name VLAN5 {
+            subnet 192.168.32.0/26 {
+                default-router 192.168.32.62
+                range PCs {
+                    start 192.168.32.1
+                    stop 192.168.32.50
+                }
+            }
+        }
+        shared-network-name VLAN10 {
+            subnet 192.168.32.64/26 {
+                default-router 192.168.32.126
+                range PCs {
+                    start 192.168.32.65
+                    stop 192.168.32.105
+                }
+            }
+        }
+    }
+    ssh {
+        port 22
+    }
+}
+system {
+    config-management {
+        commit-revisions 100
+    }
+    console {
+        device ttyS0 {
+            speed 9600
+        }
+    }
+    host-name vyos
+    login {
+        user vyos {
+            authentication {
+                encrypted-password ****************
+                plaintext-password ****************
+            }
+            level admin
+        }
+    }
+    syslog {
+        global {
+            facility all {
+                level info
+            }
+            facility protocols {
+                level debug
+            }
+        }
+    }
+    time-zone UTC
+}
 ```
 
 **Router 2**
@@ -126,4 +198,61 @@ interfaces {
 }
 protocols {
     static {
+        route 192.168.32.0/26 {
+            next-hop 10.9.93.33 {
+            }
+        }
+        route 192.168.32.64/26 {
+            next-hop 10.9.93.33 {
+            }
+        }
+    }
+}
+service {
+    dhcp-server {
+        shared-network-name LAN5 {
+            subnet 192.168.32.128/26 {
+                default-router 192.168.32.129
+                range PCs {
+                    start 192.168.32.130
+                    stop 192.168.32.180
+                }
+            }
+        }
+    }
+    ssh {
+        port 22
+    }
+}
+system {
+    config-management {
+        commit-revisions 100
+    }
+    console {
+        device ttyS0 {
+            speed 9600
+        }
+    }
+    host-name vyos
+    login {
+        user vyos {
+            authentication {
+                encrypted-password ****************
+                plaintext-password ****************
+            }
+            level admin
+        }
+    }
+    syslog {
+        global {
+            facility all {
+                level info
+            }
+            facility protocols {
+                level debug
+            }
+        }
+    }
+    time-zone UTC
+}
 ```
