--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -1,11 +1,11 @@
 # Documentation for E05
 
-### Topology maps
+## Topology maps
 ![](./E05/Topologies-Log_topo.png) 
 
 ![](./E05/Topologies-Phy_topo.png) 
 
-### Getting started
+## Getting started
 
 I cloned VyOS 1 to get the second one and used Lubuntu wireshark VM as Lubuntu 3.
 
@@ -74,7 +74,7 @@ I then created static routes for both routers:
 
 ![](./E05/lub3trace.png)
 
-### Configs
+## Configs
 
 **Router 1**
 ```
