--- a/documentation/E05.md
+++ b/documentation/E05.md
@@ -13,7 +13,7 @@ I changed Lubuntu adapter settings from **LAN 3** to **LAN 5**
 
 ![](./E05/wschange.png) 
 
-VyOS 1 and 2 use untagged IPs. These are their configs:
+VyOS 1 and 2 use untagged IPs. These are their configs then:
 
 ![](./E05/vyos1.png) 
 ![](./E05/vyos2.png)
