--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -1,3 +1,6 @@
 # Documentation for E06
 
 ## Cables and devices
+I will be using MikroTik's RouterBOARD hex-routers as my switches and routers. Cheapest I could find them is at 59,90€.
+
+I will use copies of my laptop as the PCs/end hosts. Each costs around 600€.
