--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -3,4 +3,8 @@
 ## Cables and devices
 I will be using MikroTik's RouterBOARD hex-routers as my switches and routers. Cheapest I could find them is at 59,90€.
 
-I will use copies of my laptop as the PCs/end hosts. Each costs around 600€.
+I will use copies of my laptop as the PCs/end hosts. Each costs 700€.
+
+For cabling I need simple RJ-45 cables. They are 10€ each.
+
+## Machine housing
