--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -5,6 +5,7 @@ I will be using MikroTik's RouterBOARD hex-routers as my switches and routers. C
 
 I will use copies of my laptop as the PCs/end hosts. Each costs 700€.
 
-For cabling I need simple RJ-45 cables. They are 10€ each.
+For cabling I need simple RJ-45 cables that are long enough. They are 9,90€ each.
 
 ## Machine housing
+Good enough cabinets for switches and routers are pretty expensive. A good one I picked is 1224,90€.
