--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -9,3 +9,11 @@ For cabling I need simple RJ-45 cables that are long enough. They are 9,90€ ea
 
 ## Machine housing
 Good enough cabinets for switches and routers are pretty expensive. A good one I picked is 1224,90€.
+
+## Budget table
+| Item | Price | Quantity | Total |
+| :--- | :--- | :--- | :--- |
+| Switch, router | 60 | 4 | 240 |
+| End host | 1500 | 3 | 4500 |
+| Cable | 170 | 5  | 850 |
+| Cabinet | 5500 | 1 | 5500 |
