--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -13,8 +13,8 @@ Good enough cabinets for switches and routers are pretty expensive. A good one I
 ## Budget table
 | Item | Price | Quantity | Total |
 | :--- | :--- | :--- | :--- |
-| Switch, router | 59,90€ | 4 | 239,60€ |
-| End host | 700€ | 3 | 2100€ |
-| Cable | 9,90€ | 5  | 49,50€ |
-| Cabinet | 1224,90€ | 1 | 1224,90 |
-||||3614€|
+| Switch, router | 59,90 € | 4 | 239,60 € |
+| End host | 700 € | 3 | 2100 € |
+| Cable | 9,90 € | 5  | 49,50 € |
+| Cabinet | 1224,90 € | 1 | 1224,90 € |
+||||3614 €|
