--- a/documentation/E06.md
+++ b/documentation/E06.md
@@ -17,4 +17,4 @@ Good enough cabinets for switches and routers are pretty expensive. A good one I
 | End host | 700 € | 3 | 2100 € |
 | Cable | 9,90 € | 5  | 49,50 € |
 | Cabinet | 1224,90 € | 1 | 1224,90 € |
-|||**Total**|3614 €|
+|||**Total**| **3614 € **|
